--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: go
 go:
     - 1.4.2
-script: go test -v -cover
+script:
+    - go test -v -cover
+    - go build
+    - ./webloc -version
+    - ./webloc data
