--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,12 +16,11 @@ init:
 install:
   - go version
   - go env
-  - mkdir c:\gopath
+  - mkdir %GOPATH%
   - go get -u golang.org/x/tools/cmd/cover
   - go get -u github.com/tischda/go2xunit
 
 build_script:
-  - cd %APPVEYOR_BUILD_FOLDER%
   - go get
   - go build -o webloc.exe
 
