--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: go
 go:
     - 1.4.2
 script:
-    - go test -v -cover
-    - go build
+    - make test
+    - make build
     - ./webloc -version
     - ./webloc data
