--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,12 +16,11 @@ install:
   - go env
   - mkdir %GOPATH%
   - go get -u github.com/tischda/go2xunit
-  - go get -u github.com/tischda/go-plist
 
 build_script:
   - for /f "delims=" %%a in ('git describe --tags') do @set version=%%a
   - ps: Update-AppveyorBuild -Version $env:version
-  - go build -ldflags "all=-X main.version=%version% -s"
+  - go build -mod vendor -ldflags "all=-X main.version=%version% -s"
 
 test_script:
   - webloc.exe -version
