--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - go version
   - go env
   - mkdir %GOPATH%
-  - go get -u github.com/tischda/go2xunit
+  - go install github.com/tischda/go2xunit
 
 build_script:
   - for /f "delims=" %%a in ('git describe --tags') do @set version=%%a
