--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,9 @@ install:
   - go version
   - go env
   - mkdir %GOPATH%
-  # This is not a depenency but a test resport filter
+  # This is not a dependency but a test report filter...
+  # WARNING: behaviour will change in go 1.16
+  # cf. https://stackoverflow.com/questions/24878737/what-is-the-difference-between-go-get-and-go-install
   - set GO111MODULE=off
   - go get github.com/tischda/go2xunit
   - set GO111MODULE=on
